--- a/config.yaml.example
+++ b/config.yaml.example
@@ -32,3 +32,11 @@ sms_tokens:
   echoapp:
     access_key: ''
     access_secret: ''
+rabbit_mq:
+  xyt:
+    url: 'amqp://{username}:{password}@localhost:5672/{vhost}'
+
+tongcheng_keys:
+  14:
+    key: '4MTU1KBG'
+    user_id: 'be3ItcG2WLeCbZVDSjIQG6p6ygFOGr
