优惠券添加防止超额领取的逻辑

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -88,6 +88,17 @@ priority=1
 stopasgroup=true
 killasgroup=true
 
+[program:activity]
+directory=/data/go/src/github.com/gw123/echo-app
+command=go run entry/main.go activity
+stdout_logfile= logs/activity.log
+redirect_stderr=true
+autostart=true
+autorestart=true
+startsecs=5
+priority=1
+stopasgroup=true
+killasgroup=true
 
 
 
