--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,7 @@ resources/echoapp-frontend/node_modules
 .vscode
 etcd.sh
 config.qys.yaml
-
+docker/conf
+docker/redis
+docker/resources
+docker/echoapp
