--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,125 +2,135 @@ version: "3"
 services:
         user:
            image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-           container_name: echoapp-user
            ports:
              - 8881:8881
-           command: echoapp user --config /etc/echoapp/config.yaml
+           command: echoapp --config-type etcd  user
            volumes:
              -  ./resources:/usr/local/var/echoapp/resources
-             -  ./conf/config.yaml:/etc/echoapp/config.yaml
+           env_file:
+             - .env
 
         goods:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-goods
           ports:
             - 8882:8882
-          command: echoapp goods --config /etc/echoapp/config.yaml
+          command: echoapp goods --config-type etcd
           volumes:
             -  ./resources:/usr/local/var/echoapp/resources
-            -  ./conf/config.yaml:/etc/echoapp/config.yaml
+          env_file:
+            - .env
 
         order:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-order
           ports:
             - 8883:8883
-          command: echoapp order --config /etc/echoapp/config.yaml
+          command: echoapp order --config-type etcd
           volumes:
             -  ./resources:/usr/local/var/echoapp/resources
-            -  ./conf/config.yaml:/etc/echoapp/config.yaml
+          env_file:
+            - .env
 
         comment:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-comment
           ports:
             - 8885:8885
-          command: echoapp comment --config /etc/echoapp/config.yaml
+          command: echoapp comment --config-type etcd
           volumes:
             -  ./resources:/usr/local/var/echoapp/resources
-            -  ./conf/config.yaml:/etc/echoapp/config.yaml
+          env_file:
+            - .env
 
         file:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-file
           ports:
             - 8888:8888
-          command: echoapp file --config /etc/echoapp/config.yaml
+          command: echoapp file --config-type etcd
           volumes:
             -  ./resources:/usr/local/var/echoapp/resources
-            -  ./conf/config.yaml:/etc/echoapp/config.yaml
+          env_file:
+            - .env
 
         message:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-message
           ports:
             - 8890:8890
-          command: echoapp message --config /etc/echoapp/config.yaml
+          command: echoapp message --config-type etcd
           volumes:
             -  ./resources:/usr/local/var/echoapp/resources
-            -  ./conf/config.yaml:/etc/echoapp/config.yaml
+          env_file:
+            - .env
 
         site:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-site
           ports:
             - 8889:8889
-          command: echoapp site --config  /etc/echoapp/config.yaml
+          command: echoapp site --config-type etcd
           volumes:
              - ./resources:/usr/local/var/echoapp/resources
-             - ./conf/config.yaml:/etc/echoapp/config.yaml
+          env_file:
+            - .env
 
         activity:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
           container_name: echoapp-activity
           ports:
             - 8891:8891
-          command: echoapp activity --config /etc/echoapp/config.yaml
+          command: echoapp activity --config-type etcd
           volumes:
             - ./resources:/usr/local/var/echoapp/resources
-            - ./conf/config.yaml:/etc/echoapp/config.yaml
+          env_file:
+            - .env
 
 ####################
         job-check-ticket:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-check-ticket
-          command: echoapp check-ticket --config /etc/echoapp/config.yaml
-          volumes:
-            - ./conf/config.yaml:/etc/echoapp/config.yaml
+          command: echoapp check-ticket --config-type etcd
+          env_file:
+            - .env
 
         job-order-create:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-order-create
-          command: echoapp order-create --config /etc/echoapp/config.yaml
-          volumes:
-            - ./conf/config.yaml:/etc/echoapp/config.yaml
+          command: echoapp order-create --config-type etcd
+          env_file:
+            - .env
 
         job-order-paid:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-order-paid
-          command: echoapp order-paid --config /etc/echoapp/config.yaml
-          volumes:
-            - ./conf/config.yaml:/etc/echoapp/config.yaml
+          command: echoapp order-paid --config-type etcd
+          env_file:
+            - .env
 
         job-send-sms:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-send-sms
-          command: echoapp send-sms --config /etc/echoapp/config.yaml
+          command: echoapp send-sms --config-type etcd
           volumes:
             - ./conf/config.yaml:/etc/echoapp/config.yaml
+          env_file:
+            - .env
 
-        job-sync-partner-code:
+        job-ticket-sync-code:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-sync-partner-code
-          command: echoapp sync-partner-code --config /etc/echoapp/config.yaml
-          volumes:
-            - ./conf/config.yaml:/etc/echoapp/config.yaml
+          command: echoapp ticket-sync-code --config-type etcd
+          env_file:
+            - .env
 
         job-user-score-change:
           image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:${ECHOAPP_TAG:-latest}
-          container_name: echoapp-user-score-change
-          command: echoapp user-score-change --config /etc/echoapp/config.yaml
-          volumes:
-            - ./conf/config.yaml:/etc/echoapp/config.yaml
+          command: echoapp user-score-change --config-type etcd
+          env_file:
+            - .env
 
+        redis:
+          image: redis:rc-alpine3.11
+          ports:
+            - 6380:6379
+          expose:
+            - 6379
+          volumes:
+            - ./redis:/etc/redis
+          command:
+            - redis-server
+            - /etc/redis/redis.conf
+          networks:
+            - backend
 
