添加k8S 快速部署方式

--- a/.gitignore
+++ b/.gitignore
@@ -36,13 +36,17 @@ resources/echoapp-frontend/node_modules
 .vscode
 etcd.sh
 config.qys.yaml
-docker/conf
-docker/redis
-docker/resources
-docker/echoapp
-docker/.env
+deploy/docker/conf
+deploy/docker/redis
+deploy/docker/resources
+deploy/docker/echoapp
+deploy/docker/.env
+deploy/k8s/env-configMap.yml.prod
+deploy/k8s/redis-svr.yml.prod
+
 gather/
 cmd/crontabs/cron_job.go
 redis-6.0.8/
 *.yaml.json
 dump.rdb
+
