--- a/deploy/k8s/order-svr.yaml
+++ b/deploy/k8s/order-svr.yaml
@@ -69,5 +69,6 @@ spec:
                        operator: "In"
                        values:
                         - "k8s-node1"
+                        - "k8s-node02"
                              
       
