--- a/deploy/k8s/etcd-svr.yaml
+++ b/deploy/k8s/etcd-svr.yaml
@@ -1,30 +1,42 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: site
-  namespace: echoapp
+  name: trace
+  namespace:  echoapp
 spec:
   selector:
-    app: site
-  ports:
-  - name: "site-8889"
-    #nodePort: 32209
-    port: 80
-    protocol: "TCP"
-    targetPort: 8889
+    app: jaegertracing
   type: "NodePort"
+  ports:
+  - name: "trace-16686"
+    port: 16686
+    protocol: "TCP"
+    targetPort: 16686
+  - name: "trace-6831"
+    port: 6831
+    protocol: "UDP"
+    targetPort: 6831
+  - name: "trace-6832"
+    port: 6832
+    protocol: "UDP"
+    targetPort: 6832
+  - name: "trace-5775"
+    port: 5775
+    protocol: "UDP"
+    targetPort: 5775
+
 ---
 
 apiVersion: "apps/v1"
 kind: "Deployment"
 metadata:
-  name: "site-deploy"
+  name: "trace-deploy"
   namespace: "echoapp"
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: "site"
+      app: "jaegertracing"
   strategy:
     rollingUpdate:
       maxSurge: "25%"
@@ -33,30 +45,20 @@ spec:
   template:
     metadata:
       labels:
-        app: "site"
+        app: "jaegertracing"
     spec:
-      imagePullSecrets:
-      - name: gdocker
       containers:
-      - name: "site-service"
-        image: registry.cn-beijing.aliyuncs.com/gapi/echoapp:latest
-        args:
-        - "site"
-        - "--config-type=apollo"
-        command:
-        - "echoapp"
+      - name: "trace-service"
+        image: jaegertracing/all-in-one:latest
         imagePullPolicy: "Always"
         resources: {}
-        workingDir: "/usr/local/var/echoapp"
         envFrom:
           - configMapRef:
               name: cm-echoapp-env
-
       hostAliases:
       - hostnames:
         - "sh2"
         ip: "124.70.157.82"
-    
 #      affinity:
 #         nodeAffinity:
 #                 preferredDuringSchedulingIgnoredDuringExecution:
