--- a/deploy/k8s/user-svr.yaml
+++ b/deploy/k8s/user-svr.yaml
@@ -69,5 +69,5 @@ spec:
                        operator: "In"
                        values:
                         - "k8s-node1"
-                             
+                        - "k8s-node02"
       
